Content added for the strings section.

--- a/pages/06_strings.html
+++ b/pages/06_strings.html
@@ -41,7 +41,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: </h3>
+        <h3>Strings: length</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -54,6 +54,313 @@
           <div class="codeOutcomeCont">
             <!-- The result. -->
             <div id="stringsOutput_1"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: length</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_2"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_2"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: length</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_3"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_3"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: indexOf()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_4"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_4"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: indexOf()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_5"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_5"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: slice()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_6"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_6"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: slice()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_7"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_7"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: slice()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_8"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_8"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: slice()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_9"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_9"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: slice()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_10"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_10"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: slice()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_11"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_11"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: substring()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_12"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_12"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: toLowerCase()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_13"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_13"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: toUpperCase()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_14"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_14"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: replace()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_15"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_15"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: concat()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_16"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_16"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: repeat()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_17"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_17"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: match()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_18"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_18"></div>
+            <div id="stringsOutput_18b"></div>
           </div>
         </div>
       </div>
