Content add for the numbers secition.

--- a/pages/07_numbers.html
+++ b/pages/07_numbers.html
@@ -41,7 +41,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: </h3>
+        <h3>Numbers: Exponents</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -54,6 +54,523 @@
           <div class="codeOutcomeCont">
             <!-- The result. -->
             <div id="numbersOutput_1"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Exponents</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_2"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_2"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: parseInt()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_3"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_3"></div>
+            <div id="numbersOutput_3b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: parseInt()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_4"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_4"></div>
+            <div id="numbersOutput_4b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: parseInt()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_5"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_5"></div>
+            <div id="numbersOutput_5b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: parseFloat()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_6"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_6"></div>
+            <div id="numbersOutput_6b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Number()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_7"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_7"></div>
+            <div id="numbersOutput_7b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Number()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_8"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_8"></div>
+            <div id="numbersOutput_8b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Number()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_9"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_9"></div>
+            <div id="numbersOutput_9b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: The + Operator</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_10"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_10"></div>
+            <div id="numbersOutput_10b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: The + Operator</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_11"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_11"></div>
+            <div id="numbersOutput_11b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: toString()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_12"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_12"></div>
+            <div id="numbersOutput_12b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.max()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_13"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_13"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.max()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_14"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_14"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.max()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_15"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_15"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.min()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_16"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_16"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.pow()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_17"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_17"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.sqrt()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_18"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_18"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.round()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_19"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_19"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.round()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_20"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_20"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.ceil()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_21"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_21"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.ceil()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_22"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_22"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.floor()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_23"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_23"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.floor()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_24"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_24"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.trunc()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_25"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_25"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.trunc()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_26"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_26"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.random()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_27"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="numBut27">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_27"></div>
+            <div id="numbersOutput_27b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.random()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_28"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="numBut28">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_28"></div>
+            <div id="numbersOutput_28b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Numbers: Math.random()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="numbersCode_29"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="numBut29">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="numbersOutput_29"></div>
+            <div id="numbersOutput_29b"></div>
           </div>
         </div>
       </div>
